==> zephyrproject-rtos/zephyr/subsys/bluetooth/controller/ll_sw/ti/hal/cc13xx_cc26xx/radio/radio.c <==
#include <stdio.h>
#include <string.h>
#include <sys/dlist.h>
#include <sys/util.h>
#include <sys/mempool_base.h>
#include <toolchain.h>
#include <bluetooth/gap.h>
#define DeviceFamily_CC13X2
#include <ti/drivers/rf/RF.h>
#include <ti/drivers/Power.h>
#include <ti/drivers/power/PowerCC26XX.h>
#include <ti/drivers/power/PowerCC26X2.h>
#include <driverlib/rf_data_entry.h>
#include <driverlib/aon_rtc.h>
#include <driverlib/osc.h>
#include <driverlib/prcm.h>
#include <driverlib/rf_mailbox.h>
#include <driverlib/rf_common_cmd.h>
#include <driverlib/rf_ble_mailbox.h>
#include <driverlib/rfc.h>
#include <rf_patches/rf_patch_cpe_bt5.h>
#include <inc/hw_ccfg.h>
#include <inc/hw_fcfg1.h>
#include "util/mem.h"
#include "hal/ccm.h"
#include "hal/radio.h"
#include "ll_sw/pdu.h"
#include "irq.h"
#include "hal/cntr.h"
#include "hal/ticker.h"
#include "hal/swi.h"
#define BT_DBG_ENABLED 1
#define LOG_MODULE_NAME bt_ctlr_hal_ti_radio
#include "common/log.h"
#include "hal/debug.h"
#define RADIO_PDU_LEN_MAX (BIT(8) - 1)
#define CC13XX_CC26XX_INCLUDE_LEN_BYTE 1
#define CC13XX_CC26XX_INCLUDE_CRC 1
#define CC13XX_CC26XX_APPEND_RSSI 1
#define CC13XX_CC26XX_APPEND_TIMESTAMP 4
#define CC13XX_CC26XX_ADDITIONAL_DATA_BYTES                                    \
	(0 + CC13XX_CC26XX_INCLUDE_LEN_BYTE + CC13XX_CC26XX_INCLUDE_CRC +      \
	 CC13XX_CC26XX_APPEND_RSSI + CC13XX_CC26XX_APPEND_TIMESTAMP)
#define CC13XX_CC26XX_NUM_RX_BUF 2

void __radio_isr_set(const char *file, const char *fn, int line,
		     const char *cb_name, radio_isr_cb_t cb, void *param)
{
	irq_disable(LL_RADIO_IRQn);

	isr_cb_param = param;
	isr_cb = cb;

	/* Clear pending interrupts */
	ClearPendingIRQ(LL_RADIO_IRQn);

	irq_enable(LL_RADIO_IRQn);
}

void radio_tx_power_set(u32_t power)
{
	RF_setTxPower(rfHandle,
		      RF_TxPowerTable_findValue(
			      (RF_TxPowerTable_Entry *)RF_BLE_txPowerTable,
			      power));
}

void radio_freq_chan_set(u32_t chan)
{
	/*
	 * The LLL expects the channel number to be computed as
	 * 2400 + chan [MHz]. Therefore a compensation of -2 MHz
	 * has been provided.
	 */
	LL_ASSERT(2 <= chan && chan <= 80);
	LL_ASSERT(!(chan & 0x1));

	unsigned int idx = chan - 2;
	struct FrequencyTableEntry *fte =
		(struct FrequencyTableEntry *)&config_frequencyTable_ble[idx];
	drv_data->whiten = fte->whitening;

	switch (chan) {
	case 2:
		drv_data->chan = 37;
		break;
	case 4 ... 24:
		drv_data->chan = (chan - 4) / 2;
		break;
	case 26:
		drv_data->chan = 38;
		break;
	case 28 ... 78:
		drv_data->chan = (chan - 6) / 2;
		break;
	case 80:
		drv_data->chan = 39;
		break;
	}
}

void radio_aa_set(u8_t *aa)
{
	drv_data->access_address = *(u32_t *)aa;
}

void radio_pkt_rx_set(void *rx_packet)
{
	if (!drv_data->ignore_next_rx) {
		BT_DBG("rx_packet: %p", rx_packet);
	}
	rx_pkt_ptr = rx_packet;
}

void radio_pkt_tx_set(void *tx_packet)
{
	char *typespecstr = "(unknown)";
	bool pdu_is_adv = drv_data->access_address == PDU_AC_ACCESS_ADDR;
	u16_t command_no = -1;

	tx_pkt_ptr = tx_packet;
	next_tx_radio_cmd = NULL;

	/* There are a number of TX commands that simply cannot be performed
	 * in isolation using this platform. E.g. SCAN_RSP. There is no command
	 * to initiate that particular PDU. It is typically sent automatically
	 * after a SCAN_REQ is received (which is also automatic).
	 */
	drv_data->ignore_next_tx = false;

	if (pdu_is_adv) {
		const struct pdu_adv *pdu_adv =
			(const struct pdu_adv *)tx_packet;
		if (pdu_type_updates_adv_data(pdu_adv->type)) {
			update_adv_data((u8_t *)pdu_adv->adv_ind.data,
					pdu_adv->len -
						sizeof(pdu_adv->adv_ind.addr),
					false);
		}

		switch (pdu_adv->type) {
		case PDU_ADV_TYPE_ADV_IND:
			command_no = CMD_BLE_ADV;
			typespecstr = "ADV: ADV_IND";
			next_tx_radio_cmd =
				(rfc_bleRadioOp_t *)&drv_data->cmd_ble_adv;
			break;
		case PDU_ADV_TYPE_DIRECT_IND:
			typespecstr = "ADV: DIRECT_IND";
			break;
		case PDU_ADV_TYPE_NONCONN_IND:
			typespecstr = "ADV: NONCONN_IND";
			break;
		case PDU_ADV_TYPE_SCAN_REQ:
			typespecstr = "ADV: SCAN_REQ";
			break;
		case PDU_ADV_TYPE_SCAN_RSP:
			drv_data->ignore_next_tx = true;
			break;
		case PDU_ADV_TYPE_CONNECT_IND:
			typespecstr = "ADV: CONNECT_IND";
			break;
		case PDU_ADV_TYPE_SCAN_IND:
			typespecstr = "SCAN_IND";
			break;
		case PDU_ADV_TYPE_EXT_IND:
			typespecstr = "ADV: EXT_IND";
			break;
		case PDU_ADV_TYPE_AUX_CONNECT_RSP:
			typespecstr = "ADV: AUX_CONNECT_RSP";
			break;
		default:
			typespecstr = "ADV: (unknown)";
			break;
		}

	} else {
		/* PDU is data */
		const struct pdu_data *pdu_data =
			(const struct pdu_data *)tx_packet;
		switch (pdu_data->ll_id) {
		case PDU_DATA_LLID_DATA_CONTINUE:
			typespecstr = "DATA: DATA_CONTINUE";
			radio_enqueue_tx_pdu(pdu_data, PDU_DC_LL_HEADER_SIZE + pdu_data->len);
			break;
		case PDU_DATA_LLID_DATA_START:
			typespecstr = "DATA: DATA_START";
			break;
		case PDU_DATA_LLID_CTRL:
			switch (((struct pdu_data_llctrl *)pdu_data)->opcode) {
			case PDU_DATA_LLCTRL_TYPE_CONN_UPDATE_IND:
				typespecstr = "DATA: CTRL: CONN_UPDATE_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_CHAN_MAP_IND:
				typespecstr = "DATA: CTRL: CHAN_MAP_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_TERMINATE_IND:
				typespecstr = "DATA: CTRL: TERMINATE_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_ENC_REQ:
				typespecstr = "DATA: CTRL: ENC_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_ENC_RSP:
				typespecstr = "DATA: CTRL: ENC_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_START_ENC_REQ:
				typespecstr = "DATA: CTRL: START_ENC_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_START_ENC_RSP:
				typespecstr = "DATA: CTRL: START_ENC_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_UNKNOWN_RSP:
				typespecstr = "DATA: CTRL: UNKNOWN_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_FEATURE_REQ:
				typespecstr = "DATA: CTRL: FEATURE_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_FEATURE_RSP:
				typespecstr = "DATA: CTRL: FEATURE_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_PAUSE_ENC_REQ:
				typespecstr = "DATA: CTRL: PAUSE_ENC_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_PAUSE_ENC_RSP:
				typespecstr = "DATA: CTRL: PAUSE_ENC_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_VERSION_IND:
				typespecstr = "DATA: CTRL: VERSION_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_REJECT_IND:
				typespecstr = "DATA: CTRL: REJECT_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_SLAVE_FEATURE_REQ:
				typespecstr = "DATA: CTRL: SLAVE_FEATURE_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_CONN_PARAM_REQ:
				typespecstr = "DATA: CTRL: CONN_PARAM_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_CONN_PARAM_RSP:
				typespecstr = "DATA: CTRL: CONN_PARAM_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_REJECT_EXT_IND:
				typespecstr = "DATA: CTRL: REJECT_EXT_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_PING_REQ:
				typespecstr = "DATA: CTRL: PING_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_PING_RSP:
				typespecstr = "DATA: CTRL: PING_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_LENGTH_REQ:
				typespecstr = "DATA: CTRL: LENGTH_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_LENGTH_RSP:
				typespecstr = "DATA: CTRL: LENGTH_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_PHY_REQ:
				typespecstr = "DATA: CTRL: PHY_REQ";
				break;
			case PDU_DATA_LLCTRL_TYPE_PHY_RSP:
				typespecstr = "DATA: CTRL: PHY_RSP";
				break;
			case PDU_DATA_LLCTRL_TYPE_PHY_UPD_IND:
				typespecstr = "DATA: CTRL: PHY_UPD_IND";
				break;
			case PDU_DATA_LLCTRL_TYPE_MIN_USED_CHAN_IND:
				typespecstr = "DATA: CTRL: MIN_USED_CHAN_IND";
				break;
			default:
				typespecstr = "DATA: CTRL: (unknown)";
				break;
			}
			break;

		default:
			typespecstr = "DATA: (unknown)";
			break;
		}

#if 1
		if ( NULL != typespecstr ) {
			BT_DBG(
				"PDU %s: {\n\t"
				"ll_id: %u\n\t"
				"nesn: %u\n\t"
				"sn: %u\n\t"
				"md: %u\n\t"
				"rfu: %u\n\t"
				"len: %u\n\t"
				"}"
				,
				typespecstr,
				pdu_data->ll_id,
				pdu_data->nesn,
				pdu_data->sn,
				pdu_data->md,
				pdu_data->rfu,
				pdu_data->len
			);
		}
#endif
	}

	if (drv_data->ignore_next_tx) {
		BT_DBG("ignoring next TX %s", command_no_to_string(command_no));
		return;
	}

	if ( -1 == command_no || NULL == next_tx_radio_cmd ) {
//		LL_ASSERT(command_no != -1);
//		LL_ASSERT(next_tx_radio_cmd != NULL);
		return;
	}

	next_tx_radio_cmd->commandNo = command_no;

	if (ble_commandNo_automatically_performs_rx(command_no)) {
		drv_data->ignore_next_rx = true;
	}
}

void radio_tx_enable(void)
{
	if (!drv_data->ignore_next_tx) {
		LL_ASSERT(next_tx_radio_cmd != NULL);
		next_radio_cmd = next_tx_radio_cmd;
		radio_tmr_start_now(true);
	}
}

void radio_disable(void)
{
	//BT_DBG("now: %u", cntr_cnt_get());
	/*
	 * 0b1011..Abort All - Cancels all pending events and abort any
	 * sequence-in-progress
	 */
	RFCDoorbellSendTo(CMDR_DIR_CMD(CMD_ABORT));

	/* Set all RX entries to empty */
	RFCDoorbellSendTo((u32_t)&drv_data->cmd_clear_rx);

	/* generate interrupt to get into isr_radio */
	RF_postCmd(rfHandle, (RF_Op *)&drv_data->cmd_nop, RF_PriorityNormal,
		   rf_callback, RF_EventLastCmdDone);

	next_radio_cmd = NULL;
}

void radio_switch_complete_and_rx(u8_t phy_rx)
{
	/*  0b0110..RX Start @ T1 Timer Compare Match (EVENT_TMR = T1_CMP) */
	if (!drv_data->ignore_next_rx && NULL == next_radio_cmd) {
		next_radio_cmd =
			(rfc_bleRadioOp_t *)&drv_data->cmd_ble_generic_rx;
	}

	/* the margin is used to account for any overhead in radio switching */
	next_wu = rx_wu + RX_MARGIN;
}

void radio_switch_complete_and_tx(u8_t phy_rx, u8_t flags_rx, u8_t phy_tx,
				  u8_t flags_tx)
{
	/*  0b0010..TX Start @ T1 Timer Compare Match (EVENT_TMR = T1_CMP) */
	if (drv_data->ignore_next_tx) {
		next_radio_cmd = next_tx_radio_cmd;
	}

	/* the margin is used to account for any overhead in radio switching */
	next_wu = tx_wu + TX_MARGIN;
}

void radio_switch_complete_and_disable(void)
{
	RF_ratDisableChannel(rfHandle, drv_data->rat_hcto_handle);
	next_radio_cmd = NULL;
}

void radio_tmr_status_reset(void)
{
	tmr_aa_save = 0;
	tmr_end_save = 0;
}

void radio_tmr_tifs_set(u32_t tifs)
{
	tmr_tifs = tifs;
}

void radio_tmr_hcto_configure(u32_t hcto)
{
	if (skip_hcto) {
		skip_hcto = 0;
		return;
	}

	drv_data->rat_hcto_compare.timeout = hcto;

	/* 0b1001..RX Stop @ T2 Timer Compare Match (EVENT_TMR = T2_CMP) */
	drv_data->rat_hcto_handle =
		RF_ratCompare(rfHandle, &drv_data->rat_hcto_compare, NULL);
}

void radio_tmr_aa_capture(void)
{
	tmr_aa_save = 1;
}

u32_t radio_tmr_aa_get(void)
{
	BT_DBG("return tmr_aa (%u) - rtc_diff_start_us (%u) = %u", tmr_aa, rtc_diff_start_us, tmr_aa - rtc_diff_start_us);
	return tmr_aa - rtc_diff_start_us;
}

void radio_tmr_end_capture(void)
{
	tmr_end_save = 1;
}

u32_t radio_tmr_end_get(void)
{
	return tmr_end - rtc_start;
}
